Velcro test First SandBox/src/objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>Acct_Plan__c</fullName>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Other Projects</relationshipLabel>
        <relationshipName>Other_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Potential_Project_Value__c</fullName>
        <label>Potential Project Value?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Summarize what this project may be in some bullet points
*Application
*Start Time
*Duration
*Project description</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Other Project</label>
    <nameField>
        <label>Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>